--- a/iraq.Rmd
+++ b/iraq.Rmd
@@ -1,7 +1,9 @@
 ---
-title: ""
-author: ""
+title: "Untitle Project Name"
+author: "[Lily Nur Aini](https://github.com/lilynuraini)"
 date: ""
+mail: "lily_nuraini@ymail.com"
+github: "lilynuraini"
 output: 
   html_document:
     theme : journal
@@ -14,6 +16,13 @@ output:
 knitr::opts_chunk$set(echo = FALSE)
 knitr::opts_chunk$set(message = FALSE)
 knitr::opts_chunk$set(warning = FALSE)
+knitr::knit_hooks$set(class = function(before, options, envir) {
+  if(before){
+    sprintf("<div class = '%s'>", options$class)
+  }else{
+    "</div>"
+  }
+})
 
 
 library(tidyverse)
@@ -36,6 +45,7 @@ library(extrafont)
 #Use new updated file
 InitialData <- read_xlsx("incidents_edit.xlsx",sheet = "incidents_edit") %>%
   dplyr::mutate(Governorate = Gov_2) %>%
+  dplyr::mutate(StartDate = as_date(StartDate)) %>%
   dplyr::mutate(Governorate= fct_recode(Governorate,"Border" = "Border/Between Governorates")) %>%
   dplyr::filter(!Governorate %in% c("Nationwide excluding Baghdad","Outside Iraq","Northern Iraq","Southern Iraq","South-Central Iraq")) %>%
   droplevels
@@ -81,6 +91,7 @@ ByGov <- InitialData %>%
   dplyr::mutate(Year = as.factor(Year)) %>%
   dplyr::arrange(Year,Governorate)
 
+timeline <- data.frame(start_date=as_date(c("2003-03-20", "2011-12-19", "2014-01-01")), end_date=as_date(c("2011-12-18", "2013-12-31", "2017-12-09")), event=c("U.S. Invasion & Insurgency", "Protests & Insurgency", "ISIS War"))
 
 ```
 
@@ -89,75 +100,63 @@ theme.universal <-
   theme(text = element_text(family = "Franklin Gothic Medium", color = "#444444"),
         plot.title = element_text(size = 24),
         plot.subtitle = element_text(size = 18),
+        plot.caption = element_text(size = 8),
         axis.title = element_text(size = 14),
         axis.text = element_text(size = 12)
   )
 
 ```
 
-#Untitled Project Name
-
-
 ##Background
 
 When news about Iran's top general, Qasem Solemani, killed in U.S. drone strike at Baghdad broke out earlier this year, I couldn't help but searched any news related to the topic and somehow found a news about [U.S oil company workers leaving Iraq due to the heightened tension in the region](https://edition.cnn.com/2020/01/03/business/us-oil-company-workers-leaving-iraq/index.html). Quite surprised by the number of oil companies operating in Iraq, I searched again and traced back the history that led me to the infamous early 2000's Iraq - U.S. conflict. From WTC bombings to Iraq war and the aftermath.
 
-When searching the news, I came across this [Iraq Body Count website](https://www.iraqbodycount.org/database/) that provided data of civilian casualty from violence from the beginning of the war, 2013, until February 2017. I took this as an opportunity to visualize the data and incorporate it with the events during the time. 
-
-
+When searching the news, I came across this [Iraq Body Count website](https://www.iraqbodycount.org/database/) that provided data of civilian casualty from violence from the beginning of the war in 2013 until February 2017. I took this as an opportunity to visualize the data and incorporate it with the events during the time. 
+<br>
 
 ##Process
 
 The dataset from Iraq Body Count looks promising. It seems to be clean and ready to use. However, I find that some of the data attributes shown by the website aren't available in the dataset. Instead, they need to be extracted from the available attributes. Because I want to focus on the number and spread of casualty throughout the country, I only select some attributes and clean them to be used later in charts.
 
-I'm still learning how to present data with ggplot so I read multiple blog posts and R videos and use some of them to produce my own chart. These posts about visualisation and analysis in R [part one](https://www.sharpsightlabs.com/blog/shipping-analysis-r-data-wrangling/) and [part two](https://www.r-bloggers.com/how-to-do-an-analysis-in-r-part-2-visualization-and-analysis/) really help me to start creating chart using ggplot. I highly recommend R beginners to read the posts because they explain the process of data analysis and visualization in detail. Other blog posts that help me are [this one](rpubs.com/spoonerf/countrymapggplot2) and [this one](http://prabhasp.com/blog/how-to-make-choropleths-in-r/). Both explain step-by-step process to create map chart.
-
-
+I'm still learning how to present data with ggplot so I read multiple blog posts and R videos and use some of them to produce my own chart. These posts about visualisation and analysis in R [part one](https://www.sharpsightlabs.com/blog/shipping-analysis-r-data-wrangling/) and [part two](https://www.sharpsightlabs.com/blog/shipping-analysis-r-data-visualization/) really help me to start creating chart using ggplot. I highly recommend R beginners to read the posts because they explain the process of data analysis and visualization in detail. Other blog posts that help me are [this one](rpubs.com/spoonerf/countrymapggplot2) and [this one](http://prabhasp.com/blog/how-to-make-choropleths-in-r/). Both explain step-by-step process to create map chart.
+<br>
 
 ##Analysis and Story
 
-In mid March 2003, the beginning of U.S. invasion era, the casualty spreads throughout Iraq but it intensifies in the following years as the result of lawlessness, Sunni-Shia sectarian violence, and insurgency against U.S. military and U.S.-backed Iraqi government. Despite series of military campaign by both U.S and Iraq forces, the situation gets worse and civilian death toll reaches its peak in 2006 and 2007. In June 2007, U.S. commanders decide to arm some of Sunni militant groups, the same groups that used to battle U.S. military, to counter the insurgency. As a result, the security improves and casualty gradually decreases although insurgency still continues and northern, western, and central governorates still have higher number of casualty than the rest. The progress continues until the end of 2011 when U.S. agrees to pull all of the military soldiers out of Iraq. However, violence and attacks escalate after U.S. departure.
+In mid March 2003, the beginning of U.S. invasion era, the casualty spreads throughout Iraq but it intensifies in the following years as the result of lawlessness, Sunni-Shia sectarian violence, and insurgency against U.S. military and U.S.-backed Iraqi government. Despite series of military campaign by both U.S and Iraqi forces, the situation gets worse and civilian death toll reaches its peak in 2006 and 2007. In June 2007, U.S. commanders decide to arm some of Sunni militant groups, the same groups that used to battle U.S. military, to counter the insurgency. As a result, the security improves and casualty gradually decreases although insurgency still continues and some governorates still have higher number of casualty than the rest. The progress continues until the end of 2011 when U.S. agrees to pull all of the military soldiers out of Iraq. However, violence and attacks escalate after U.S. departure.
+<br><br>
 
+<center>
+```{r yearly_overview_chart,class = "chart-outline", fig.width=8,fig.height=7}
 
-
-
-
-```{r yearly_overview_chart,fig.height = 5, fig.width = 8, fig.align = "center"}
-ByGov %>%
-  dplyr::group_by(Year) %>%
-  dplyr::summarize(Casualty = sum(Casualty)) %>%
+InitialData %>%
+  dplyr::group_by(StartDate) %>%
+  dplyr::summarize(Casualty = sum(`Reported Maximum`)) %>%
   dplyr::ungroup() %>%
-  ggplot(aes(x = Year, y = Casualty, label = Casualty)) +
-  geom_bar(stat = "identity",fill = "#CE1126") +
-  geom_text(aes(label = paste(round(Casualty/1000, 0), "K", sep="")), vjust = 1.1, color = "#FFFFFF", size = 4) + 
-  geom_vline(xintercept = 9.5, color = "#444444", size = .5)+
-  geom_vline(xintercept = 11.5, color = "#444444", size = .5) +
-  scale_y_continuous(expand = c(.08, .08), labels = scales::unit_format(unit = "k", scale = 1e-3)) +
+  ggplot(aes(x = StartDate, y = Casualty)) +
+  geom_rect(timeline, mapping = aes(xmin = start_date, ymin = 0, xmax = end_date, ymax = Inf, fill = event),inherit.aes = FALSE, alpha = 0.3) +
+  geom_text(timeline,mapping = aes(x = start_date, y = 2000, label = event), size = 3, angle = 90, nudge_x = 50) +
+  geom_line(color = "#CE1126",stat = "identity") +
+  geom_smooth(color = "#007A3D") +
+  #scale_y_continuous(expand = c(.05, .05)) +
+  scale_y_log10() +
+  scale_x_date(date_breaks = "1 year", date_labels = "%Y") +
   theme.universal +
-  labs(title = "Iraq's Casualty by Year") +
-  theme(
-    panel.grid = element_blank(),
-    axis.title = element_blank(),
-    axis.ticks = element_line(color = "#444444"),
-    axis.ticks.y = element_blank(),
-    axis.text.y = element_blank()
-  ) +
-  annotate("text", x = 5, y = 35000, label = "US Invasion and Insurgency", color = "#444444", family = "Franklin Gothic Medium") +
-  annotate("text", x = 10.55, y = 35000, label = "Insurgency\n& Protest", color = "#444444", family = "Franklin Gothic Medium") +
-  annotate("text", x = 13.55, y = 35000, label = "ISIS War", color = "#444444", family = "Franklin Gothic Medium")
+  theme(axis.title.x = element_blank(),
+        axis.text = element_text(size = 10),
+        panel.grid = element_blank(),
+        legend.position = "none") +
+  labs(title = "Iraq's Casualty Overtime",
+       caption = "*ISIS war ends on Dec 9th 2017, but data is available until Feb 28th 2017") +
+  scale_fill_manual(values = c("#000000","#FFFFFF","#CE1126"))
 
 
 ```
+</center>
+<br><br>
 
-
-
-
-
-In addition to the insurgency, in late 2012, massive protests start in Anbar governorate, western Iraq. The protesters, who are Sunnis, feel marginalized in the post-Saddam Iraq with Shia-dominated government, and claim that anti-terrorism laws are allegedly being abused and used to arrest and harass Sunnis. The protests quickly spread to other predominantly Sunni governorates in northern Iraq and continue throughout 2013. The Iraqi forces take a strict measure by attacking the protesters exercising what they consider civil disobedience. Hundreds are killed and injured in clashes between Iraqi forces and protesters. ISIS exploits the situation by recruiting new fighters and launching attacks to take control of western and northern Iraq with the ultimate goal of capturing Baghdad. The data shows an increase of casualty in 2013 and another peak in 2014  with the most intense areas in western, northern, and central Iraq. In contrast, the casualty in the southern provinces are moderate to low. Iraqi forces, with the help from U.S.-led international coalition, launch military campaigns to regain control of ISIS-occupied areas. The campaigns are successful and Iraq captures the areas one by one. In late 2017, Iraq captures ISIS' last two strongholds in Anbar governorate which ends the war. The prime minister declares victory over ISIS.
-
-
-
-
+In addition to the insurgency and sectarian violence, in late 2012, massive protests start in Anbar governorate, western Iraq. The protesters, who are Sunnis, feel marginalized in the post-Saddam Iraq with Shia-dominated government, and claim that anti-terrorism laws are allegedly being abused and used to arrest and harass Sunnis. The protests quickly spread to other predominantly Sunni governorates in northern Iraq and continue throughout 2013. The Iraqi forces take a strict measure by attacking the protesters exercising what they consider civil disobedience. Hundreds are killed and injured in clashes between Iraqi forces and protesters. Sectarian violence, bombing, and kidnapping are going rampant. ISIS exploits the situation by recruiting new fighters and launching attacks to take control of western and northern Iraq with the ultimate goal of capturing Baghdad. The data shows an significant increase of casualty in 2013 and another peak in 2014 with the most intense areas in western, northern, and central Iraq. Iraqi forces, with the help from U.S.-led international coalition, launch military campaigns to regain control of ISIS-occupied areas. The campaigns are successful and Iraq captures the areas one by one. In late 2017, Iraq captures ISIS' last two strongholds in Anbar governorate which ends the war. The prime minister declares victory over ISIS.
+<br><br>
 
 ```{r choropleth_data, include = FALSE}
 #get iraq outline map
@@ -209,7 +208,8 @@ Iraq_ByGov_Winz$Casualty[Iraq_ByGov_Winz$Casualty > bench] <- bench
 
 ```
 
-```{r choropleth,fig.height = 5, fig.width = 8, fig.align = "center"}
+<center>
+```{r choropleth,class = "chart-outline"}
 #Create choropleth
 ggplot() + 
   geom_polygon(data = Iraq_ByGov_Winz, aes(x = long, y = lat, group = group, fill = Casualty), color = "black", size = 0.25) + 
@@ -229,18 +229,15 @@ ggplot() +
   )
   
 ```
+</center>
+<br><br>
 
+Map chart shows the different spread of casualty and how the situation shifts from 2003 to 2017. In 2003, the casualty spreads throughout Iraq with the emphasis in southern and central. This is the result of operation shock-and-awe by U.S. that starts from the south then moves to the central area to topple the Iraqi government in Baghdad. The situation changes in the following years as the insurgency rises and sectarian violence intesifies which lead to the worst number of casualty in 2006 and 2007. In 2008 and 2009, most governorates are in lighter shade of red than the previous year. The number of casualty drops as the security becomes more stable. In 2010 until 2012, the situation improves but western, northern, and eastern governorates are in darker shade than the others. Clashes between protesters and police forces, sectarian violence, and insurgency escalate in 2013. A step back for national security causing a spike in casualty. In 2014 until 2017, the inevitable ISIS war happens in the same governorates that have higher number of casualty since 2010.
 
-
-
-
-Map chart shows the different spread of casualty and how the situation shifts from 2003 to 2017. In 2003, the casualty spreads throughout Iraq with the emphasis in southern and central. This is the result of operation shock-and-awe by U.S. that starts from the south then moves to the central area to topple the Iraqi government in Baghdad. The situation changes in the following years as the insurgency rises and sectarian violence intesifies which lead to the worst number of casualty in 2006 and 2007. In 2008 and 2009, most governorates are less red than the previous year. The number of casualty drops as the security becomes more stable. In 2010 until 2012, the situation improves but western, northern, and eastern governorates are more red than others. The situation worsen in these governorates in 2013 as the protests breakout and the insurgency becomes severe. In 2014 until 2017, the inevitable ISIS war happens in the same governorates that have higher number of casualty since 2010.
-
-
-
-
-
-```{r gov_chart,fig.height = 5, fig.width = 8, fig.align = "center"}
+Despite all the horrible things that happen in Iraq, they don't have the same impact for some areas. Notice the northeastern governorates are in the lightest shade since the beginning of the war. Also, the security in southern Iraq improves. The southern governorates have high number of casualty in the beginning but they change overtime.
+<br><br>
+<center>
+```{r gov_chart,class = "chart-outline"}
 ByGovWithRank <- ByGov %>%
   dplyr::group_by(Year) %>%
   dplyr::mutate(rank = min_rank(desc(Casualty))) %>%
@@ -274,12 +271,11 @@ ByGovWithRank %>%
   coord_flip() 
 
 ```
+</center>
+<br><br>
 
-
-
-
-
-```{r rank_chart,fig.height = 7, fig.width = 11, fig.align = "center"}
+<center>
+```{r rank_chart,class = "rankchart",fig.height=5,fig.width=9}
 ByGovWithRank %>%
   filter(rank <= 10) %>%
   dplyr::mutate(gov_flag = ifelse(Governorate %in% c("Baghdad","Anbar","Salah Al-Din","Diyala","Ninawa"),T,F)) %>%
@@ -310,5 +306,10 @@ ByGovWithRank %>%
   scale_color_manual(values = c("#000000","#007A3D","#DACF2B","#CE1126","#BBBBBB"), labels = c("Western", "Central", "Eastern","Northern","Non Top 5")) +
   guides(alpha = FALSE)
 ```
+</center>
+<br><br>
+
+Rank chart shows that the rank of casualty changes overtime. Top highest casualty governorates in 2003 change drastically the next year. Western, northern, and eastern governorates rises to the top and stay until 2017.
+
 
 ##Reference
